--- a/views/articles/show.ejs
+++ b/views/articles/show.ejs
@@ -1,11 +1,49 @@
 <h1><%= article.title %> <small>by <%= article.author.getFullName() %></small></h1>
+  <p>
+    <strong><%= moment(article.createdAt).calendar() %></strong>
+  </p>
+
+  <p><%= article.content %></p>
+
+  <p><small><a href="/articles/edit/<%= article.id %>">Edit</a></small></p>
+
+<hr />
+
+<h3>Comments</h3>
+
+  <% article.comments.forEach(comment => { %>
+
+    <div class="well">  
+       <p><strong><%= comment.name %></strong></p>
+
+       <p><%= comment.content %></p>
+
+       <p><small><%= moment(comment.createdAt).calendar() %></small></p>
+    </div>
+  <% }) %>
 
 <p>
-  <strong><%= moment(article.createdAt).calendar() %></strong>
 </p>
 
-<p><%= article.content %></p>
+<hr />
 
+<h4>Comment on this post:</h4>
+
+    <form action="/articles/:id/comments" method="POST">
+
+      <div class="form-group">
+        <label for="name">Name:</label>
+        <input type="text" class="form-control" name="name" required>
+      </div>
+
+      <div class="form-group">
+       <label for="content">Comment:</label>
+       <textarea type="text" class="form-control" name="content" required></textarea>
+     </div>
+  
+     <input type="hidden" class="form-control" name="articleId" value="<%= article.id %>">
+     <input type="submit" class="btn btn-primary">
+   </form>
 <hr />
 
 <a href="/">&larr; Back Home</a>
